Fix for menu-bar on smaller viewports. Should work now.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -68,13 +68,16 @@ body .fixed {
     font-size: 3em; } }
 
 #menu {
-  font-size: 0.8em; }
+  font-size: 0.7em; }
   #menu #video-tab {
     display: none; }
 
-@media screen and (min-width: 320px) {
+.nav > li > a {
+  padding: 10px 8px; }
+
+@media screen and (min-width: 364px) {
   #menu {
-    font-size: 1.2em; } }
+    font-size: 0.8em; } }
 
 @media screen and (min-width: 1024px) {
   #menu {
